[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coqui-tts-api"
version = "1.0.0"
description = "Minimal Coqui TTS API for Render"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "TTS==0.22.0",
    "numpy==1.24.3",
    "scipy==1.11.2",
]
